sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: value unary_! is not a member of Int
  while(!x==n)
        ^AlgGnomeSort:13: error: not found: value i
    if(!plusPetit(i-1,i+1))
                  ^AlgGnomeSort:13: error: not found: value i
    if(!plusPetit(i-1,i+1))
                      ^AlgGnomeSort:15: error: not found: value i
      echange(i-1,i+1)
              ^AlgGnomeSort:15: error: not found: value i
      echange(i-1,i+1)
                  ^