sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  val n = getNombreValeurs()
  var x = 0
  var end = false
  
  while(!x==n)
  {
    if(x==0)
    {
      x+=1
    }
    if(!plusPetit(i-1,i+1))
    {
      echange(i-1,i+1)
      x-=1
    }
    else
    {
      x+=1
    }
  }

}